test/bad/check/Levity.hs
module Levity where

data Levity s = Levity ~!s Int

levity :: Levity s
levity = Levity 1